# circleci-test

./: .dockerignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
scripts/: install-depends  run-tests
test/: test_main.py
