[tool.poetry]
name = "testter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
requests = "^2.27.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.34"
grequests = "^0.6.0"
python-dotenv = "^0.20.0"
bson = "^0.5.10"
PyJWT = "^2.3.0"
cryptography = "^36.0.2"
databases = "^0.5.5"
aiomysql = "^0.1.1"
fastapi-utils = "^0.2.1"
celery = "^5.2.7"
redis = "^4.3.4"
prometheus-fastapi-instrumentator = "^5.8.2"
xmltodict = "^0.13.0"
StrEnum = "^0.4.8"
importlib-metadata = "^4.12.0"
yoyo-migrations = "^7.3.2"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.18.0"
pytest-httpx = "^0.12.0"
anyio = "^3.6.1"
pytest-asyncio = "^0.19.0"
colorama = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
